# applied-nlp-finance

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: applied-nlp-finance-handoff-brief.md
data/: README.md
docker/: Dockerfile  docker-compose.yml
exercises/: README.md
exercises/ch01/: advanced.md  foundations.md  intermediate.md
exercises/ch02/: advanced.md  foundations.md  intermediate.md
exercises/ch03/: advanced.md  foundations.md  intermediate.md
exercises/ch04/: advanced.md  foundations.md  intermediate.md
exercises/ch05/: advanced.md  foundations.md  intermediate.md
exercises/ch06/: advanced.md  foundations.md  intermediate.md
exercises/ch07/: advanced.md  foundations.md  intermediate.md
exercises/ch08/: advanced.md  foundations.md  intermediate.md
exercises/ch09/: advanced.md  foundations.md  intermediate.md
exercises/ch10/: advanced.md  foundations.md  intermediate.md
exercises/ch11/: advanced.md  foundations.md  intermediate.md
exercises/ch12/: advanced.md  foundations.md  intermediate.md
exercises/ch13/: advanced.md  foundations.md  (+1 more)
notebooks/: ch01_why_text_moves_markets.ipynb  ch02_text_data_acquisition.ipynb  ch03_nlp_foundations.ipynb  ch04_transformers_llms_financial.ipynb  ch05_sentiment_signal.ipynb  ch06_earnings_calls.ipynb  ch07_central_bank_language.ipynb  ch08_social_media_alt_data.ipynb  ch09_entity_extraction_kg.ipynb  ch10_regime_detection.ipynb  ch11_backtesting_evaluation.ipynb  ch12_deployment.ipynb  ch13_risk_ethics.ipynb
src/: __init__.py
tests/: conftest.py
(+57 files in other folders)
