[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "applied-nlp-finance"
version = "0.1.0"
description = "Companion code for Applied NLP for Finance"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Jonathan Rocha"}]

dependencies = [
    "transformers>=4.40",
    "torch>=2.2",
    "datasets>=2.18",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "fastapi>=0.110",
    "uvicorn>=0.28",
    "praw>=7.7",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "sec-edgar-downloader>=5.0",
    "pgvector>=0.2",
    "sqlalchemy>=2.0",
    "spacy>=3.7",
    "networkx>=3.2",
    "neo4j>=5.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
